--- a/style.css
+++ b/style.css
@@ -1,21 +1,3 @@
-nav ul{
+nav>ul{
     display: flex;
-}
-nav li{
-    list-style: none;
-    margin-right: 10px;
-}
-nav ul a{
-    text-decoration: none;
-    color: black;
-}
-.dropdown{
-    position: absolute;
-    background-color: chartreuse;
-    border: 2px solid goldenrod;
-    border-radius: 20px;
-    display: none;
-}
-nav>ul>li:hover>.dropdown{
-    display: block;
 }
